feat: Implementing Black list feature
